--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,9 +24,25 @@ android {
         jvmTarget = rootProject.ext.java_version
     }
 
-    buildTypes {
+    signingConfigs {
+        debug {
+            storeFile file("debug.keystore")
+        }
         release {
+            storeFile file("release.keystore")
+            keyAlias "datasetbob"
+            keyPassword getReleasePassword()
+            storePassword getReleasePassword()
+        }
+    }
+
+    buildTypes {
+        debug {
+            applicationIdSuffix ".debug"
             minifyEnabled false
+        }
+        release {
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -48,6 +64,17 @@ android {
             includeAndroidResources = true
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+    }
 }
 
 dependencies {
@@ -62,7 +89,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     // Navigation library
-    def nav_version = "2.1.0"
+    def nav_version = "2.2.0"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
@@ -88,4 +115,22 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
+
+    // Drive
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    implementation 'com.google.http-client:google-http-client-gson:1.34.1'
+    implementation('com.google.api-client:google-api-client-android:1.30.8') {
+        exclude group: 'org.apache.httpcomponents'
+        exclude group: 'com.google.guava'
+    }
+    implementation('com.google.apis:google-api-services-drive:v3-rev136-1.25.0') {
+        exclude group: 'org.apache.httpcomponents'
+        exclude group: 'com.google.guava'
+    }
+}
+
+private String getReleasePassword() {
+    // Create a gradle configuration for assembleRelease with
+    // -Pdatasetbob.key.password=realpassword
+    getProperty("datasetbob.key.password")
 }
