--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,6 +100,8 @@ dependencies {
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.10.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
     kapt 'com.github.bumptech.glide:compiler:4.10.0'
 
     // Unit testing
